fixed welcome image issue on mobile

--- a/styles/sass/_mediaqueries.scss
+++ b/styles/sass/_mediaqueries.scss
@@ -32,6 +32,7 @@
                 flex-direction: column;
                     .welcomeImage {
                         order: 1;
+                        width: 70%;
                     }
                     p {
                         @include fontSize(25);
