--- a/styles/style.css
+++ b/styles/style.css
@@ -1269,6 +1269,7 @@ button:hover {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
+    width: 70%;
   }
   .welcomePage .welcomeMessage p {
     font-size: 25px;
